[gd_scene load_steps=2 format=3 uid="uid://ctaoo72xictyh"]

[ext_resource type="Script" uid="uid://c5o8hsibxi1iq" path="res://scripts/ui/sleep_interface.gd" id="1_s8wkf"]

[node name="SleepInterface" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s8wkf")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Sleep until..."
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ButtonsContainer" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MorningButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Morning"

[node name="AfternoonButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Afternoon"

[node name="EveningButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Evening"

[node name="NightButton" type="Button" parent="VBoxContainer/ButtonsContainer"]
layout_mode = 2
text = "Night"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="CancelButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="VBoxContainer/ButtonsContainer/MorningButton" to="." method="_on_morning_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/AfternoonButton" to="." method="_on_afternoon_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/EveningButton" to="." method="_on_evening_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonsContainer/NightButton" to="." method="_on_night_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
